# quemu-ios-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/iosvm/android/: MainActivity.kt
app/src/main/java/com/iosvm/android/ui/: VMScreen.kt
app/src/main/java/com/iosvm/android/vm/: VMBridge.kt  VMConfig.kt
app/src/main/java/com/iosvm/android/vnc/: VNCClient.kt
app/src/main/res/layout/: activity_main.xml
docs/: LEGAL.md
native/: CMakeLists.txt
native/src/: qemu_bridge.c  vnc_client_native.c
scripts/: build_qemu.sh
